# TermML

./: CMakeLists.txt  README.md
cmake/: Sanitizers.cmake
examples/: CMakeLists.txt  main.cpp
include/: termml.hpp
include/termml/: layout.hpp  style.hpp  text.hpp  utils.hpp
include/termml/core/: basic.hpp  bounding_box.hpp  color_utils.hpp  commands.hpp  device.hpp  event.hpp  point.hpp  raw_mode.hpp  string_utils.hpp  terminal.hpp  utf8.hpp  value_store.hpp
include/termml/css/: style.hpp  utils.hpp
include/termml/layout/: layout.hpp  line_box.hpp  text.hpp
include/termml/xml/: lexer.hpp  node.hpp  parser.hpp  token.hpp
test/: CMakeLists.txt
test/runtime/: CMakeLists.txt
